<resources>
    <string name="app_name">PitchBooker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="phonenumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="home">Home</string>
    <string name="loginaccount">Log In Account</string>
    <string name="login">Log In</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="ok">OK</string>
    <string name="menu">Menu</string>
    <string name="logout">Log Out</string>
    <string name="sent">Sent</string>
    <string name="aboutus">About Us</string>
    <string name="fill_feedback">Fill Feedback</string>
    <string name="title_activity_list__ball__field">List_Ball_Field</string>
    <string name="section_format">Hello World from section: %1$d</string>

    --Data in application
    <string name="data_app">Data_App</string>

    --URL--
    <string name="url_register">http://192.168.56.1:8000/customer/register</string>
    <string name="url_loginAcc">http://192.168.56.1:8000/customer/login_username</string>
    <string name="url_changePWD">http://192.168.56.1:8000/customer/change/password</string>
    <string name="url_fillFeedback">http://192.168.56.1:8000/feedback/add</string>
    <string name="url_reservationToday">http://192.168.56.1:8000/location/list/field/reservation/today</string>
    <string name="url_reservationOnDay">http://192.168.56.1:8000/location/list/field/reservation/on_date</string>
    <string name="url_reservationList">http://192.168.56.1:8000/customer/get/reserve_list</string>
    <string name="url_reservationAdd">http://192.168.56.1:8000/reserve/add</string>

</resources>
