<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/login"
            android:icon="@mipmap/ic_login"
            android:title="@string/loginaccount" />
        <item
            android:id="@+id/profile"
            android:icon="@mipmap/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/aboutus"
            android:icon="@mipmap/ic_aboutus"
            android:title="About Us" />
        <item
            android:id="@+id/fillfeedback"
            android:icon="@mipmap/ic_fillfeedback"
            android:title="@string/fill_feedback" />
    </group>
</menu>
