<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.msi.pitchbooker.Log_In">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        float:fletPadding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:inputType="textPersonName"
            android:drawableLeft="@mipmap/ic_username"
            android:drawablePadding="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:id="@+id/et_username"
            android:hint="@string/username"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        float:fletPadding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:id="@+id/et_password"
            android:hint="@string/password"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_green"
        android:text="@string/login"
        android:textSize="26dp"/>

    <TextView
        android:id="@+id/tv_forgetPWD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorDark"
        android:fontFamily="casual"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:textSize="20dp"
        android:textColor="@color/colorDark"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

</LinearLayout>
