<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.msi.pitchbooker.Change_Password">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorGreenDark">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="36dp"
        android:fontFamily="serif"
        android:textColor="@color/colorDark"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"/>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        float:fletPadding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:inputType="textPersonName"
            android:drawableLeft="@mipmap/ic_username"
            android:drawablePadding="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:id="@+id/et_username"
            android:hint="@string/username"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        float:fletPadding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:id="@+id/et_password"
            android:hint="@string/old_password"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        float:fletPadding="10dp">

        <EditText
            android:id="@+id/et_newpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="20dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        float:fletPadding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:id="@+id/et_confpassword"
            android:hint="@string/conf_password"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <Button
        android:id="@+id/btn_changePassword"
        android:onClick="btn_changepassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/ok"
        android:textSize="26dp"
        android:background="@drawable/btn_green"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
</LinearLayout>
