<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.msi.pitchbooker.Log_In">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreenDark">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                float:fletPadding="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn"
                    android:inputType="textPersonName"
                    android:drawableLeft="@mipmap/ic_username"
                    android:drawablePadding="20dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:id="@+id/et_username"
                    android:hint="@string/username"
                    android:fontFamily="serif"/>
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                float:fletPadding="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn"
                    android:inputType="textPassword"
                    android:drawableLeft="@mipmap/ic_password"
                    android:drawablePadding="20dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:id="@+id/et_password"
                    android:hint="@string/password"
                    android:fontFamily="serif"/>
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/btn_logIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_green"
                android:text="@string/login"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="26dp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/Sign_up"
            android:fontFamily="serif"
            android:textColor="@color/colorDark"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>
